--- a/playbooks/firewall/object_tags.yml
+++ b/playbooks/firewall/object_tags.yml
@@ -73,9 +73,9 @@
         tag_comments: "Firewall Services"
 
   tasks:
-    - name: Import Credentials from File
-      include_vars: '/root/secnet-ansible/fw'
-      no_log: 'yes'
+#    - name: Import Credentials from File
+#      include_vars: '/root/secnet-ansible/fw'
+#      no_log: 'yes'
 
     - name: Creating Interface Tags
       panos_tag_object:
