--- a/playbooks/firewall/network_interfaces.yml
+++ b/playbooks/firewall/network_interfaces.yml
@@ -57,7 +57,7 @@
         enable_dhcp: "false"
         management_profile: 'Management'
         ip: ["10.0.11.1/24"]
-        zone_name: "Management"
+        zone_name: "L3-Management"
         comment: "Management"
 
       - name: '{{ aggregate_group_name }}.15'
@@ -65,7 +65,7 @@
         enable_dhcp: "false"
         management_profile: 'Management'
         ip: ["10.0.15.1/24"]
-        zone_name: "Management"
+        zone_name: "L3-Management"
         comment: "Admins"
 
       - name: '{{ aggregate_group_name }}.21'
@@ -73,7 +73,7 @@
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.21.1/24"]
-        zone_name: "Virtualization"
+        zone_name: "L3-Virtualization"
         comment: "Management"
 
       - name: '{{ aggregate_group_name }}.31'
@@ -81,7 +81,7 @@
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.31.1/24"]
-        zone_name: "Authentication"
+        zone_name: "L3-Authentication"
         comment: "PDC"
 
       - name: '{{ aggregate_group_name }}.32'
@@ -89,7 +89,7 @@
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.32.1/24"]
-        zone_name: "Authentication"
+        zone_name: "L3-Authentication"
         comment: "PKI"
 
       - name: '{{ aggregate_group_name }}.33'
@@ -97,7 +97,7 @@
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.33.1/24"]
-        zone_name: "Authentication"
+        zone_name: "L3-Authentication"
         comment: "NAC"
 
       - name: '{{ aggregate_group_name }}.34'
@@ -105,7 +105,7 @@
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.34.1/24"]
-        zone_name: "Authentication"
+        zone_name: "L3-Authentication"
         comment: "SSO"
 
       - name: '{{ aggregate_group_name }}.41'
@@ -113,7 +113,7 @@
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.41.1/24"]
-        zone_name: "Security"
+        zone_name: "L3-Security"
         comment: "LOG"
 
       - name: '{{ aggregate_group_name }}.42'
@@ -121,7 +121,7 @@
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.42.1/24"]
-        zone_name: "Security"
+        zone_name: "L3-Security"
         comment: "VAS"
 
       - name: '{{ aggregate_group_name }}.43'
@@ -129,7 +129,7 @@
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.43.1/24"]
-        zone_name: "Security"
+        zone_name: "L3-Security"
         comment: "MON"
 
       - name: '{{ aggregate_group_name }}.44'
@@ -137,7 +137,7 @@
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.44.1/24"]
-        zone_name: "Security"
+        zone_name: "L3-Security"
         comment: "NVR"
 
       - name: '{{ aggregate_group_name }}.51'
@@ -145,7 +145,7 @@
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.51.1/24"]
-        zone_name: "Servers"
+        zone_name: "L3-Servers"
         comment: "Servers"
 
       - name: '{{ aggregate_group_name }}.91'
@@ -153,7 +153,7 @@
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.81.1/24"]
-        zone_name: "DMZ"
+        zone_name: "L3-DMZ"
         comment: "Frontend"
 
       - name: '{{ aggregate_group_name }}.95'
@@ -161,7 +161,7 @@
         enable_dhcp: "false"
         management_profile: 'Default'
         ip: ["10.0.95.1/24"]
-        zone_name: "DMZ"
+        zone_name: "L3-DMZ"
         comment: "Backend"
 
       - name: '{{ aggregate_group_name }}.111'
@@ -169,7 +169,7 @@
         enable_dhcp: "false"
         management_profile: 'Users'
         ip: ["10.0.111.1/24"]
-        zone_name: "Endpoints"
+        zone_name: "L3-Endpoints"
         comment: "Users"
 
       - name: '{{ aggregate_group_name }}.121'
@@ -177,7 +177,7 @@
         enable_dhcp: "false"
         management_profile: 'Users'
         ip: ["10.0.121.1/24"]
-        zone_name: "Endpoints"
+        zone_name: "L3-Endpoints"
         comment: "Printers"
 
       - name: '{{ aggregate_group_name }}.131'
@@ -185,7 +185,7 @@
         enable_dhcp: "false"
         management_profile: 'Users'
         ip: ["10.0.131.1/24"]
-        zone_name: "Endpoints"
+        zone_name: "L3-Endpoints"
         comment: "Phones"
 
       - name: '{{ aggregate_group_name }}.141'
@@ -193,7 +193,7 @@
         enable_dhcp: "false"
         management_profile: 'Users'
         ip: ["10.0.141.1/24"]
-        zone_name: "Endpoints"
+        zone_name: "L3-Endpoints"
         comment: "IOT"
 
       - name: '{{ aggregate_group_name }}.666'
@@ -201,7 +201,7 @@
         enable_dhcp: "false"
         management_profile: 'Users'
         ip: ["192.168.1.1/24"]
-        zone_name: "Guests"
+        zone_name: "L3-Guests"
         comment: "Guests"
 
   tasks:
@@ -262,14 +262,19 @@
         vr_name: "Project-R"
         comment: "Project-R"
 
+    - name: Creating WAN VLAN
+      panos_vlan:
+        provider: '{{ provider }}'
+        name: 'WAN'
+
     - name: Configure WAN VLAN Interface
       panos_vlan_interface:
         provider: '{{ provider }}'
-        name: "vlan.1000"
-        ip: ["96.231.240.210/24","96.231.240.211/32","96.231.240.212/32","96.231.240.213/32","96.231.240.214/32","96.231.240.215/32","96.231.240.216/32","96.231.240.217/32"]
+        name: "vlan.2000"
+        ip: ["96.231.240.210/24"]
         management_profile: "Internet"
         vlan_name: "WAN"
-        zone_name: "L2-LAN"
+        zone_name: "L3-WAN"
         vr_name: "default"
 
     - name: Configuring ISP Uplink Interface
@@ -277,6 +282,7 @@
         provider: '{{ provider }}'
         if_name: "ethernet1/1"
         mode: "layer2"
+        vlan_name: "WAN"
         enable_dhcp: false
         zone_name: "L2-WAN"
 
@@ -285,6 +291,7 @@
         provider: '{{ provider }}'
         if_name: "ethernet1/2"
         mode: "layer2"
+        vlan_name: "WAN"        
         enable_dhcp: false
         zone_name: "L2-LAN"
 
@@ -293,6 +300,7 @@
         provider: '{{ provider }}'
         if_name: "ethernet1/3"
         mode: "layer2"
+        vlan_name: "WAN"        
         enable_dhcp: false
         zone_name: "L2-LAN"
 
@@ -301,5 +309,6 @@
         provider: '{{ provider }}'
         if_name: "ethernet1/4"
         mode: "layer2"
+        vlan_name: "WAN"        
         enable_dhcp: false
         zone_name: "L2-LAN"
