--- a/playbooks/netbox/netbox.yml
+++ b/playbooks/netbox/netbox.yml
@@ -515,6 +515,32 @@
         create_prefixes_is_pool: false
 
   tasks:
+    - name: Create SECNET HQ Site
+      netbox_site:
+        netbox_url: '{{ netbox_url }}'
+        netbox_token: '{{ netbox_token }}'
+        data:
+          name: SECNET HQ
+          status: active
+          region: DMV
+          site_group: Test Site Group
+          tenant: secnet
+          time_zone: America/New York
+          physical_address: Woodbridge, VA, 22195
+          shipping_address: Woodbridge, VA, 22195
+          latitude: 38.650233
+          longitude: 77.312169
+        state: present
+
+    - name: Create SECNET Tenant
+      netbox_tenant:
+        netbox_url: '{{ netbox_url }}'
+        netbox_token: '{{ netbox_token }}'
+        data:
+          name: 'Secured Enterprise Core Network'
+          slug: secnet
+        state: present
+
     - name: Creating Manufacturers
       netbox_manufacturer:
         netbox_url: '{{ netbox_url }}'
