--- a/playbooks/netbox/netbox.yml
+++ b/playbooks/netbox/netbox.yml
@@ -631,7 +631,7 @@
         state: present
       with_items: '{{ create_prefixes }}'
 
-    - name: Create interface template within NetBox with only required information
+    - name: Creating CyberPower OR MGT Interface
       netbox_device_interface_template:
         netbox_url: '{{ netbox_url }}'
         netbox_token: '{{ netbox_token }}'
@@ -641,3 +641,23 @@
           type: 1000BASE-T (1GE)
           mgmt_only: true
         state: present      
+
+    - name: Creating PAN-PA-850 Interfaces
+      netbox_device_interface_template:
+        netbox_url: '{{ netbox_url }}'
+        netbox_token: '{{ netbox_token }}'
+        data:
+          device_type: 	OR1000LCDRM1U
+          name: ethernet1\[1-4]
+          type: 1000BASE-T (1GE)
+          mgmt_only: true
+        state: present      
+
+    - name: Create Device Role
+      netbox_device_role:
+        netbox_url: '{{ netbox_url }}'
+        netbox_token: '{{ netbox_token }}'
+        data:
+          name: Firewall
+          color: FFFFFF
+        state: present        
