--- a/playbooks/netbox/netbox.yml
+++ b/playbooks/netbox/netbox.yml
@@ -514,6 +514,22 @@
         create_prefixes_prefix_role: Guest
         create_prefixes_is_pool: false
 
+    create_device_type:
+      - item.create_device_role_name: Firewall
+        item.create_device_role_color: Dark Red
+
+      - item.create_device_role_name: Aggregation Switch
+        item.create_device_role_color: Red
+
+      - item.create_device_role_name: Access Switch
+        item.create_device_role_color: Dark Orange
+
+      - item.create_device_role_name: Access Point
+        item.create_device_role_color: Light Blue
+
+      - item.create_device_role_name: Uninterruptible Power Supply
+        item.create_device_role_color: green
+
   tasks:
     - name: Create SECNET Tenant
       netbox_tenant:
@@ -636,28 +652,161 @@
         netbox_url: '{{ netbox_url }}'
         netbox_token: '{{ netbox_token }}'
         data:
-          device_type: 	OR1000LCDRM1U
+          device_type: OR1000LCDRM1U
           name: Management
           type: 1000BASE-T (1GE)
           mgmt_only: true
         state: present      
 
-    - name: Creating PAN-PA-850 Interfaces
+    - name: Create PAN-PA-850 Interfaces MGT
       netbox_device_interface_template:
         netbox_url: '{{ netbox_url }}'
         netbox_token: '{{ netbox_token }}'
         data:
-          device_type: 	OR1000LCDRM1U
-          name: ethernet1\[1-4]
+          device_type: PA 850
+          name: Management
           type: 1000BASE-T (1GE)
           mgmt_only: true
-        state: present      
+        state: present
+
+    - name: Create PAN-PA-850 Interfaces E1/1
+      netbox_device_interface_template:
+        netbox_url: '{{ netbox_url }}'
+        netbox_token: '{{ netbox_token }}'
+        data:
+          device_type: PA 850
+          name: ethernet1/1
+          type: 1000BASE-T (1GE)
+          mgmt_only: false
+        state: present
+
+    - name: Create PAN-PA-850 Interfaces E1/2
+      netbox_device_interface_template:
+        netbox_url: '{{ netbox_url }}'
+        netbox_token: '{{ netbox_token }}'
+        data:
+          device_type: PA 850
+          name: ethernet1/2
+          type: 1000BASE-T (1GE)
+          mgmt_only: false
+        state: present
+
+    - name: Create PAN-PA-850 Interfaces E1/3
+      netbox_device_interface_template:
+        netbox_url: '{{ netbox_url }}'
+        netbox_token: '{{ netbox_token }}'
+        data:
+          device_type: PA 850
+          name: ethernet1/3
+          type: 1000BASE-T (1GE)
+          mgmt_only: false
+        state: present
+
+    - name: Create PAN-PA-850 Interfaces E1/4
+      netbox_device_interface_template:
+        netbox_url: '{{ netbox_url }}'
+        netbox_token: '{{ netbox_token }}'
+        data:
+          device_type: PA 850
+          name: ethernet1/4
+          type: 1000BASE-T (1GE)
+          mgmt_only: false
+        state: present                
+
+    - name: Create PAN-PA-850 Interfaces E1/5
+      netbox_device_interface_template:
+        netbox_url: '{{ netbox_url }}'
+        netbox_token: '{{ netbox_token }}'
+        data:
+          device_type: PA 850
+          name: ethernet1/1
+          type: SFP (1GE)
+          mgmt_only: false
+        state: present
+
+    - name: Create PAN-PA-850 Interfaces E1/6
+      netbox_device_interface_template:
+        netbox_url: '{{ netbox_url }}'
+        netbox_token: '{{ netbox_token }}'
+        data:
+          device_type: PA 850
+          name: ethernet1/6
+          type: SFP (1GE)
+          mgmt_only: false
+        state: present
+
+    - name: Create PAN-PA-850 Interfaces E1/7
+      netbox_device_interface_template:
+        netbox_url: '{{ netbox_url }}'
+        netbox_token: '{{ netbox_token }}'
+        data:
+          device_type: PA 850
+          name: ethernet1/7
+          type: SFP (1GE)
+          mgmt_only: false
+        state: present
+
+    - name: Create PAN-PA-850 Interfaces E1/8
+      netbox_device_interface_template:
+        netbox_url: '{{ netbox_url }}'
+        netbox_token: '{{ netbox_token }}'
+        data:
+          device_type: PA 850
+          name: ethernet1/8
+          type: SFP (1GE)
+          mgmt_only: false
+        state: present
+
+    - name: Create PAN-PA-850 Interfaces E1/9
+      netbox_device_interface_template:
+        netbox_url: '{{ netbox_url }}'
+        netbox_token: '{{ netbox_token }}'
+        data:
+          device_type: PA 850
+          name: ethernet1/9
+          type: SFP+ (10GE)
+          mgmt_only: false
+        state: present
+
+    - name: Create PAN-PA-850 Interfaces E1/10
+      netbox_device_interface_template:
+        netbox_url: '{{ netbox_url }}'
+        netbox_token: '{{ netbox_token }}'
+        data:
+          device_type: PA 850
+          name: ethernet1/10
+          type: SFP+ (10GE)
+          mgmt_only: false
+        state: present
+
+    - name: Create PAN-PA-850 Interfaces E1/11
+      netbox_device_interface_template:
+        netbox_url: '{{ netbox_url }}'
+        netbox_token: '{{ netbox_token }}'
+        data:
+          device_type: PA 850
+          name: ethernet1/11
+          type: SFP+ (10GE)
+          mgmt_only: false
+        state: present
+
+    - name: Create PAN-PA-850 Interfaces E1/12
+      netbox_device_interface_template:
+        netbox_url: '{{ netbox_url }}'
+        netbox_token: '{{ netbox_token }}'
+        data:
+          device_type: PA 850
+          name: ethernet1/12
+          type: SFP+ (10GE)
+          mgmt_only: false
+        state: present        
 
     - name: Create Device Role
       netbox_device_role:
         netbox_url: '{{ netbox_url }}'
         netbox_token: '{{ netbox_token }}'
         data:
-          name: Firewall
-          color: FFFFFF
-        state: present        
+          name: "{{ item.create_device_role_name }}"
+          color: '{{ item.create_device_role_color }}'
+        state: present
+      with_items: '{{ create_device_role }}'
