--- a/playbooks/netbox/netbox.yml
+++ b/playbooks/netbox/netbox.yml
@@ -872,11 +872,11 @@
           manufacturer: Rockly Linux
         state: present
 
-    - name: Create Platform PAN-OS 10.2.X
+    - name: Create Platform PAN-OS 10.2.0
       netbox_platform:
         netbox_url: '{{ netbox_url }}'
         netbox_token: '{{ netbox_token }}'
         data:
-          name: PAN-OS 10.2.x
+          name: PAN-OS 10.2.0
           manufacturer: Palo Alto Network
         state: present
