attempting to import tasks with vars

--- a/playbooks/netbox/netbox.yml
+++ b/playbooks/netbox/netbox.yml
@@ -1,6 +1,6 @@
 ---
 
-- name: "Manufacturers"
+- name: "Netbox Devices Manufacturers"
   connection: local
   hosts: localhost
   gather_facts: False
@@ -9,9 +9,6 @@
     - netbox.netbox
 
   vars:
-    #netbox_url: 'http://10.0.30.209:8000'
-    #netbox_token: 'f08329f64b101387ef07fda3fa37aab9b0eb0e4e'
-
     create_manufacturers:
       - create_manufacturers_name: "CyberPower"
       - create_manufacturers_name: "Dell EMC"
