--- a/playbooks/netbox/device_palo_alto_networks.yml
+++ b/playbooks/netbox/device_palo_alto_networks.yml
@@ -198,3 +198,21 @@
           mgmt_only: '{{ item.create_mgmt_only }}'
         state: present
       with_items: '{{ create_device_interface }}'
+
+    - name: Create device within NetBox with only required information
+      netbox_device:
+        netbox_url: '{{ netbox_url }}'
+        netbox_token: '{{ netbox_token }}'
+        data:
+          name: hqcrfw1.secnetwork.org
+          device_type: PA 850
+          device_role: Firewall
+          site: SECNET HQ
+          face: Front
+          location: Server Room
+          position: 48
+          rack: Primary Rack
+          tenant: secnet
+        state: present
+
+        
